syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

import "tokenmanager/item.proto";
import "gogoproto/gogo.proto";

message IdentityStateTransfer {
  // Hex 0x
  string contract = 1;
  string chain = 2;
  // Hex 0x
  string id = 4;
  // Hex 0x
  string stateHash = 5;
  // Dec
  string stateCreatedAtTimestamp = 6;
  string stateCreatedAtBlock = 7;
  // HEX 0x
  string replacedStateHash = 8;
}

